# aioffice-python

./: README.md  pyproject.toml  setup.sh
.github/workflows/: python-app.yml
aioffice-python/frontend/: aioffice.code-workspace  gui.py
aioffice-python/src/: agents.py  database  database.py  main.py  requirements.txt
