[project]
name = "aioffice"
version = "0.1.0"
description = "A multi-agent task manager with browser, file, and Google Drive interaction capabilities"
authors = [
    { name = "Your Name", email = "your.email@example.com" }
]
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "psycopg2-binary==2.9.9",
    "python-dotenv==1.0.1",
    "selenium==4.18.1",
    "google-auth-oauthlib==1.2.0",
    "google-auth-httplib2==0.2.0",
    "google-api-python-client==2.149.0",
]

[project.optional-dependencies]
dev = [
    "pytest==8.3.2",
    "black==24.8.0",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project.scripts]
aioffice = "aioffice.src.main:main"
